updated styles for the upload form, added upload form images, fixed layout for the collapsing fieldsets

--- a/mm_sb/css/views.css
+++ b/mm_sb/css/views.css
@@ -16,6 +16,10 @@
   font-size: 14px;
 }
 
+.view .views-field-description .field-content {
+  font-size: 12px;
+}
+
 .view .views-row {
   margin-bottom: 11px;
   padding: 10px;
@@ -107,9 +111,11 @@
 }
 
 .views-exposed-form label {
-  margin-right: 19px;
-  line-height: 35px;
+  margin-right: 10px;
   float: left;
+  color: #404040;
+  font-size: 14px;
+  line-height: 35px;
 }
 
 .views-exposed-form input[type="text"] {
@@ -119,8 +125,35 @@
   box-shadow: inset -1px 1px 3px 0 #c3c3c3;
 }
 
+.views-exposed-form .views-exposed-widget {
+  overflow: hidden;
+  float: left;
+  margin-right: 10px;
+}
+
+.views-exposed-form .views-exposed-widget select {
+  margin-top: 5px;
+}
+
+.views-exposed-form .views-exposed-widget .form-autocomplete {
+  margin-top: 3px;
+  padding: 4px;
+}
+
+html.js .views-exposed-form .views-exposed-widget .form-autocomplete {
+  background-position: 98% 8px;
+}
+
+html.js .views-exposed-form .views-exposed-widget .form-autocomplete.throbbing {
+  background-position: 98% -12px;
+}
+
+.views-exposed-form .views-exposed-widget .views-widget {
+  float: left;
+}
+
 .views-exposed-form .views-submit-button {
-  margin-top: -30px;
+  margin-top: 8px;
   float: right;
 }
 
